--- a/scss/all-block/_section.scss
+++ b/scss/all-block/_section.scss
@@ -743,9 +743,17 @@ footer {
 }
 
 @media screen and (max-width:391px) {
+    .section1 {
+        overflow-x: hidden;
+        max-width: 400px;
+        margin: 0 auto;
+        padding: 0;
+        @include BG (url(../../imges/Bitmapmobayl.png), no-repeat, 100%, end);
+    }
     footer {
         max-width: 390px;
         margin: 0 auto;
+        margin-bottom: 170px;
     }
     .footer {
         @include flexfunksiya (column, center, Space-between, wrap);
