--- a/scss/main.css
+++ b/scss/main.css
@@ -755,7 +755,6 @@ nav {
     flex-wrap: wrap;
   }
   .hero2__list--item {
-    max-width: 768px;
     margin: 0 auto;
     position: relative;
   }
@@ -810,6 +809,69 @@ nav {
     padding-bottom: 56px;
   }
   .hero2 .xamyon3 {
+    display: block;
+    position: absolute;
+    top: 0px;
+    right: -35px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .hero2--item {
+    max-width: 768px;
+    margin: 0 auto;
+    position: relative;
+  }
+  .hero2 .item-title1 {
+    font-size: 32px;
+    line-height: 32px;
+  }
+  .hero2 .item-text1 {
+    max-width: 573px;
+    padding-bottom: 40px;
+    font-family: "Lexend Deca";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 25px;
+    color: #939CAA;
+    text-align: center;
+  }
+  .hero2 .titi {
+    padding-top: 64px;
+  }
+  .odam1 {
+    display: none;
+  }
+  .bino1 {
+    display: none;
+  }
+  .xamyon1 {
+    display: none;
+  }
+  .odam2 {
+    display: block;
+    padding-bottom: 56px;
+  }
+  .odam3 {
+    display: block;
+    position: absolute;
+    top: 190px;
+    right: -35px;
+  }
+  .bino2 {
+    display: block;
+  }
+  .bino3 {
+    display: block;
+    position: absolute;
+    top: 0px;
+    left: -35px;
+  }
+  .xamyon2 {
+    display: block;
+    padding-bottom: 56px;
+  }
+  .xamyon3 {
     display: block;
     position: absolute;
     top: 0px;
